# Modus

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.pre-release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapters.rs  lib.rs  main.rs
src-tauri/src/adapters/: claude_code.rs  codebuddy.rs  codex.rs  continue.rs  cursor.rs  github_copilot.rs  goose.rs  hermes_agent.rs  kiro.rs  openclaw.rs  opencode.rs  openhands.rs  pi_agent.rs  qoder.rs  trae.rs  trae_cn.rs  trae_solo.rs  trae_solo_cn.rs  windsurf.rs  workbuddy.rs
src-tauri/src/app/: mod.rs  runtime.rs
src-tauri/src/commands/: app_settings.rs  app_updates.rs  config.rs  dashboard.rs  logging.rs  mcp.rs  mod.rs  rules.rs  settings.rs  skills.rs  tools.rs  translation.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/domains/app_updates/: commands.rs  mod.rs
src-tauri/src/domains/logging/: commands.rs  mod.rs
src-tauri/src/domains/mcp/: commands.rs  listing.rs  mod.rs
src-tauri/src/domains/rules/: commands.rs  defaults.rs  diff.rs  effective_targets.rs  files.rs  injection.rs  management.rs  mod.rs  types.rs
src-tauri/src/domains/settings/: commands.rs  mod.rs  preferences.rs
src-tauri/src/domains/skills/: app_settings.rs  commands.rs  execution.rs  inventory.rs  mod.rs  operations.rs  preview.rs  repositories.rs  types.rs  (+1 more)
src-tauri/src/platform/: config.rs  env.rs  logging.rs  mod.rs
src-tauri/src/scenario/: dev_tool.rs  mod.rs
(+167 files in other folders)
