[package]
name = "modus"
version = "1.0.3"
default-run = "Modus"
description = "A macOS desktop app for managing local AI coding tool rules, skills, configs, and MCP settings."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "modus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Modus"
path = "src/main.rs"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2.7"
dirs = "6"
toml = "0.8"
shellexpand = "3"
tauri-plugin-dialog = "2"
chrono = "0.4"
semver = "1"
window-vibrancy = "0.7.1"
sha2 = "0.10"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
